--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Project-12_NewsWebsite/style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>News Website</title>
 </head>
 
@@ -62,7 +62,7 @@
     </template>
 
 
-    <script src="/Project-12_NewsWebsite/script.js"></script>
+    <script src="/script.js"></script>
 </body>
 
 </html>
