--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav>
         <div class="main-nav flex container">
             <a href="#" class="companyLogo" onclick="location.reload()">
-                <img src="/assests/GSFnewsLogo.gif" alt="company logo" >
+                <img src="assests/GSFnewsLogo.gif" alt="company logo" >
             </a>
             <div class="nav-links">
                 <ul class="flex" id="nav-links-input">
